--- a/rcpp_practice.Rmd
+++ b/rcpp_practice.Rmd
@@ -94,11 +94,14 @@ r_ladies()
 
 ### A C++ Primer
 
-Coding in C++ differs from R in 3 major ways:
+Coding in C++ differs from R in several major ways:
 
 1. Must specify data types for everything
 2. Line breaks specified with a semicolon
 3. For our purposes, there's no vectorized operations
+4. C++ vector indices **start at zero**
+
+Please note, most example are not my own.  I've taken them from Hadley Wickham's book, *Advanced R*, found online here: http://adv-r.had.co.nz/Rcpp.html.
 
 
 ```{r}
@@ -122,6 +125,38 @@ add2(1, 2, 3)
 
 evalCpp("1 + 2 + 3")
 ```
+
+### More Examples
+
+```{r}
+## Equivalent R and C++ functions
+## Returns  1 if the input is positive and -1 if it’s negative
+signR <- function(x) {
+  if (x > 0) {
+    1
+  } else if (x == 0) {
+    0
+  } else {
+    -1
+  }
+}
+
+cppFunction('int signC(int x) {
+  if (x > 0) {
+    return 1;
+  } else if (x == 0) {
+    return 0;
+  } else {
+    return -1;
+  }
+}')
+
+signR(5)
+signC(5)
+```
+
+
+
 
 ### Comparing Speed
 
